@@ -58,12 +58,12 @@
 
 // ---------------- NSTableView data source ----------------------
 
-- (int) numberOfRowsInTableView: (NSTableView *)aTableView;
+- (NSInteger) numberOfRowsInTableView: (NSTableView *)aTableView;
 
 
 - (id)           tableView: (NSTableView *)aTableView
  objectValueForTableColumn: (NSTableColumn *)aTableColumn
-                       row: (int)rowIndex;
+                       row: (NSInteger)rowIndex;
 
 // ------------------- NSTableView delegate ------------------------
 
